--- a/package.json
+++ b/package.json
@@ -22,6 +22,18 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "firebase-admin": "^13.4.0",
+    "helmet": "^8.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
