--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "helmet": "^8.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "vercel": "^43.2.0"
   }
 }
